@@ -2,6 +2,7 @@
 
 = 1.6.18 - 2019-x-x =
 * Fix - Send fees to PayPal as line items
+* Fix - Fix error 10426 when coupons are used
 * Add - Notice about legacy payment buttons deprecation
 
 = 1.6.17 - 2019-08-08 =
